--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header class="list_header">
                 <span class="title">To-Do</span>
                 
-                <span id="goggle_btn">
+                <span id="toggle_btn">
                     <label class="switch">
                         <label for="toggle"></label> 
                         <input type="checkbox">
